Footer now aligns correctly and stays in its pen.

--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -5,23 +5,30 @@
 	height: 1px
 	display: table-row
 .footer
-	line-height: 1.5
 	padding: 10px
 	+clearfix
 	a
 		color: $mainAccent-dark
 	a:hover
 		color: $textColor
-.footer-left, .footer-right
+.footer-align
+	display: table
+	width: 100%
+.footer-left
+	line-height: 1.5
+	display: table-cell
 	vertical-align: middle
 	height: 100%
-.footer-left
+	width: 100%
+.footer-left-content
 	max-width: 500px
-	width: 70%
-	float: left
 .footer-right
+	line-height: 2
+	display: table-cell
+	vertical-align: middle
+	text-align: center
+	height: 100%
 	min-width: 100px
-	float: right
 	a
 		text-decoration: none
 		color: $textColor
